# anki

qt/aqt/: __init__.py  exporting.py  reviewer.py
qt/aqt/data/web/css/: BUILD.bazel
qt/aqt/data/web/pages/: BUILD.bazel
qt/aqt/forms/: __init__.py
ts/: licenses.json  package.json
