load("defs.bzl", "copy_page")

copy_page(
    name = "graphs_page",
    srcs = [
        "graphs.css",
        "graphs.html",
        "graphs.js",
    ],
    package = "//ts/graphs",
)

copy_page(
    name = "congrats_page",
    srcs = [
        "congrats.html",
        "congrats.js",
    ],
    package = "//ts/congrats",
)

copy_page(
    name = "previewer_page",
    srcs = [
        "previewer.html",
        "previewer.js",
    ],
    package = "//ts/previewer",
)

filegroup(
    name = "pages",
    srcs = [
        "graphs_page",
        "congrats_page",
        "previewer_page"
    ],
    visibility = ["//qt:__subpackages__"],
)
